--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="container"><center>
               <p><span class="heading3">A new album from <a href="http://www.buffalojazzoctet.com/">The Buffalo Jazz Octet</a>: <i>PausaLive</i> (<a href="http://www.cadencejazzrecords.com/">Cadence Jazz Records</a>)</span></p><p>
               <iframe width="560" height="315" src="https://www.youtube.com/embed/e80yST455hI" frameborder="0" allowfullscreen></iframe></p><center>
-              <div class="col-xs-12"><p align="center">&ldquo;“a veritable who’s who list of killer regional jazz players&rdquo;
+              <div class="col-xs-12"><p align="center">&ldquo;a veritable who’s who list of killer regional jazz players&rdquo;
 		      - Jeff Miers, <em>The Buffalo News</em></p></div>
 		  <div class="col-xs-12"><p align="center">Available April 20, 2017</p></div>
               </center>
