--- a/michaelmcneilltrio.html
+++ b/michaelmcneilltrio.html
@@ -64,7 +64,7 @@
         <div class="col-md-4 col-md-offset-1 col-xs-10 col-xs-offset-1" id="contact"><!-- Contact info -->
          <!-- email phone text skype -->                   <p align="center">Michael McNeill<br>
         phone/text: 1.585.269.9251<br>
-        Austin, TX &#8226; Buffalo, NY<br>
+        Saluda, VA &#8226; Buffalo, NY<br>
                 <a href="mailto:mcneill.michael@gmail.com"><img src="images/gmail.png" id="skype"></a>
                <a href="skype:michaelgraymcneill?call"><img src="images/skype.ico" id="skype" /></a></p>
                 
