--- a/index.html
+++ b/index.html
@@ -95,7 +95,13 @@
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form><br>
-                        $15 + $3 shipping
+                         $15 + $3 shipping (US)
+                        <br>
+                        $15 + $6 shipping (Canada)
+                        <br>
+                        $15 + $12 shipping (Mexico)
+                        <br>
+                        $15 + $15 shipping (all others)
                         
 <br>
                         Available soon on iTunes, at <a href="http://www.bopshop.com">The Bop Shop</a> and from <a href="https://www.klompfoot.com/?description_option=contains&description=&title_option=starts&title=&label_option=starts&Label=CadenceJazz&Number=&price_option=eq&Price=&sort_order=description&Search=Search&max_count=500">Cadence Jazz Records</a>
