--- a/performances.html
+++ b/performances.html
@@ -213,7 +213,7 @@
                             <ul>
                                 <li>Jason Jenkins, bass</li>
                                 <li>Michael McNeill, piano</li>
-                                <li>Billy Williams, drums</li>
+                                <li>Kevin Gaines, drums</li>
                             </ul>
                             <p>
                                 <a href="http://www.barrelthiefwine.com/">Barrel Thief</a>
@@ -238,7 +238,7 @@
                             </p>
                             <h4>No Hidden Agendas</h4>
                             <ul>
-                                <li>Kelly Rossum, trumpet</li>
+				    <li><a href="http://www.krossum.com">Kelly Rossum</a>, trumpet</li>
                                 <li>Michael McNeill, piano</li>
 				    <li>Chris Brydge, bass</li>
 				    <li>Abinnet Berhanu, drums</li>
