--- a/performances.html
+++ b/performances.html
@@ -76,11 +76,13 @@
                                 Friday, September 28, 2018<br>
                                 7:30pm
                             </p>
-                            <h4>Rossum/McNeill duo</h4>
+                            <h4>Rossum/McNeill Duo</h4>
                             <ul>
 				    <li><a href="http://www.krossum.com">Kelly Rossum</a>, trumpet</li>
                                 <li>Michael McNeill, piano</li>
                             </ul>
+				
+				<p>Original jazz/improvised music by Rossum and McNeill.
                             <p>
                                 Urbanna United Methodist Church
                                 <br>
