--- a/performances.html
+++ b/performances.html
@@ -100,6 +100,39 @@
                         </div>
                     </div>
 		
+		<div class="col col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-1">
+                        <div class="thumbnail_background">
+                        </div>
+                        <div class="thumbnail performance">
+                            <p>
+                                Sunday, November 4, 2018<br>
+                                8pm                            </p>
+				<h4>BopArts presents <a href="http://www.buffalojazzoctet.com"/>The Buffalo Jazz Octet</a></h4>
+				 <h4>Music from 1968</h4>
+                            <ul>
+                                <li>John Bacon, drums</li>
+				    <li>Steve Baczkowksi, baritone saxophone</li>
+				    <li>Kelly Bucheger, alto and tenor saxophones</li>
+				    <li>Tim Clarke, trumpet</li>
+				    <li>Joe Goehle, bass</li>
+                                <li>Michael McNeill, piano</li>
+				    <li>Nelson Rivera, tenor and soprano saxophones</li>
+				    <li>Phil Sims, trombone</li>
+                            </ul>
+                            <p>
+                                <a href="http://bopshop.com">The Bop Shop</a>
+                                <br>
+                                1460 Monroe Avenue
+                                <br>Rochester, NY 
+                            </p>
+                            
+                            <p>
+                                $10 donation<br>
+				    
+                            </p>
+                        </div>
+                    </div>
+		
 			 <div class="col col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-1">
                         <div class="thumbnail_background">
                         </div>
