--- a/performances.html
+++ b/performances.html
@@ -1185,7 +1185,7 @@
                         <br>
                         
                         Saluda, VA &#8226; Buffalo, NY<br>
-                    <a href="mailto:michaelmcneill@fastmail.com"><img src="images/gmail.png" class="skype"></a>
+                    <a href="mailto:info@michaelgraymcneill.com"><img src="images/gmail.png" class="skype"></a>
                     <a href="skype:michaelgraymcneill?call"><img src="images/skype.ico" class="skype" /></a>
                     <br>
                         <span class="smalltext">Background photo by Meghan McNeill
