--- a/michaelmcneilltrio.html
+++ b/michaelmcneilltrio.html
@@ -84,7 +84,7 @@ many plays.&rdquo;<br>
         <div class="col-md-4 col-md-offset-1 col-xs-10 col-xs-offset-1" id="contact"><!-- Contact info -->
          <!-- email phone text skype -->                   <p align="center">Michael McNeill<br>
         Saluda, VA &#8226; Buffalo, NY<br>
-                <a href="mailto:michaelmcneill@fastmail.com"><img src="images/gmail.png" id="skype"></a>
+                <a href="mailto:info@michaelgraymcneill.com"><img src="images/gmail.png" id="skype"></a>
                <a href="skype:michaelgraymcneill?call"><img src="images/skype.ico" id="skype" /></a></p>
                 
    <!-- Social media -->
