--- a/pastperformances.html
+++ b/pastperformances.html
@@ -2322,7 +2322,7 @@ Austin, TX
         <p><strong>Michael McNeill</strong><br>
         phone/text: 1.585.269.9251<br>
         Saluda, VA &#8226; Buffalo, NY<br>
-                <a href="mailto:mcneill.michael@gmail.com"><img src="images/gmail.png" id="skype"></a>
+                <a href="mailto:info@michaelgraymcneill.com"><img src="images/gmail.png" id="skype"></a>
                <a href="skype:michaelgraymcneill?call"><img src="images/skype.ico" id="skype" /></a></p>
         </div>
         
