--- a/performances_new.html
+++ b/performances_new.html
@@ -318,7 +318,7 @@
                         <br>
                         phone/text: 1.585.269.9251<br>
                         Saluda, VA &#8226; Buffalo, NY<br>
-                    <a href="mailto:mcneill.michael@gmail.com"><img src="images/gmail.png" class="skype"></a>
+                    <a href="mailto:info@michaelgraymcneill.com"><img src="images/gmail.png" class="skype"></a>
                     <a href="skype:michaelgraymcneill?call"><img src="images/skype.ico" class="skype" /></a></p>
                 </div>
         
