--- a/teaching.html
+++ b/teaching.html
@@ -69,7 +69,7 @@
 
 <p align="left">I hold Bachelor and Master of Music degrees, and have taught regularly since 2003.  I received my Bachelor of Music degree in Music Theory in 2004 from Nazareth College of Rochester, where my principal teachers included Beverly Smoker (classical piano) and Paul Smoker (jazz piano & composition), as well as composition professors Tim Sullivan, Jing Jing Luo, and Carl Wiens.  I received my Master of Music degree in Modern American Music in 2007 from the Longy School of Music (Cambridge, MA), where my principal teachers included Charlie Banacos (jazz piano), George Garzone (jazz piano), and Randall Hodgkinson (classical piano).</p>
 
-               <p align="left">Please contact me at mcneill.michael@gmail.com for more information.
+               <p align="left">Please contact me at info@michaelgraymcneill.com for more information.
  </p>
             
                             </div>
@@ -98,7 +98,7 @@
                         <br>
                         
                         Saluda, VA &#8226; Buffalo, NY<br>
-                    <a href="mailto:michaelmcneill@fastmail.com"><img src="images/gmail.png" class="skype"></a>
+                    <a href="mailto:info@michaelgraymcneill.com"><img src="images/gmail.png" class="skype"></a>
                     <a href="skype:michaelgraymcneill?call"><img src="images/skype.ico" class="skype" /></a>
                     <br>
                         <span class="smalltext">Background photo by Meghan McNeill
