--- a/performances.html
+++ b/performances.html
@@ -109,7 +109,7 @@
                             <ul>
                                 <li>John Bacon, drums</li>
 				    <li>Steve Baczkowksi, baritone saxophone</li>
-				    <li>Kelly Bucheger, alto and tenor saxophones</li>
+				    <li>Elliot Scozzaro, alto saxophone</li>
 				    <li>Tim Clarke, trumpet</li>
 				    <li>Joe Goehle, bass</li>
                                 <li>Michael McNeill, piano</li>
