Put in Covid19 cancellations

--- a/performances.html
+++ b/performances.html
@@ -201,12 +201,14 @@
                         </div>
                         <div class="thumbnail performance">
                             <p>
-                                Sunday, March 15, 2020<br>
-                                7-10pm
+                                <del>Sunday, March 15, 2020<br>
+					7-10pm</del><br>
+				    &ast;cancelled due to COVID19&ast;
+				    
                             </p>
                             <h4>Butterbean Jazz Quartet</h4>
                             <ul>
-				    <li>Rusty Farmer, bass</li>
+				    <li>TBA, bass</li>
                                 <li>Roger Carroll, tenor saxophone</li>
                                 <li>Michael McNeill, piano</li>
                                 <li>Scott Clark, drums</li>
@@ -230,8 +232,9 @@
                         </div>
                         <div class="thumbnail performance">
                             <p>
-                                Wednesday, March 18, 2020<br>
-				    8pm
+                                <del>Wednesday, March 18, 2020<br>
+					8pm</del>
+				    &ast;cancelled due to COVID19&ast;
                             </p>
 				<h4>Jordan Ponzi Trio</h4>
                             <ul>
@@ -258,7 +261,8 @@
                         <div class="thumbnail performance">
                             <p>
                                 Sunday, March 22, 2020<br>
-                                7-9pm
+                                7-9pm<br>
+				    Probably not happening due to Covid19
                             </p>
                             
                             <ul>
@@ -282,8 +286,9 @@
                         </div>
                         <div class="thumbnail performance">
                             <p>
-                                Thursday, March 26, 2020<br>
-                                7pm
+                                <del>Thursday, March 26, 2020<br>
+					7pm</del>
+				    &ast;cancelled due to COVID19&ast;
                             </p>
 				<h4>CNU Jazz 4 Justice</h4>
                             <p>The Jazz 4 Justice&trade; fundraising event supports the Legal Aid Society of Eastern Virginia and provides dedicated scholarship and program support for the CNU jazz program.</p>
@@ -307,8 +312,9 @@
                         </div>
                         <div class="thumbnail performance">
                             <p>
-                                Sunday, March 29, 2020<br>
-                                8pm-12am
+                                <del>Sunday, March 29, 2020<br>
+					8pm-12am</del>
+				    &ast;cancelled due to COVID19&ast;
                             </p>
                             <h4>A Bryan Connolly Trio</h4>
                             <ul>
