--- a/performances.html
+++ b/performances.html
@@ -74,13 +74,13 @@
                         <div class="thumbnail performance">
                             <p>
                                 Wednesday, May 11, 2022<br>
-                                8pm-12am
+                                8pm
                             </p>
                             <h4>Jessica Pavone String Ensemble</h4>
                             <ul>
-                                <li>Jessica Pavone, viola</li>
-                                <li>Aim&#233;e Niemann</li>
-                                <li>Abby Swidler</li>
+                                <li>Jessica Pavone, viola &#38; voice</li>
+                                <li>Aim&#233;e Niemann, violin &#38; voice</li>
+                                <li>Abby Swidler, violin/viola &#38; voice</li>
                             </ul>
                             <h4>opening: Scott Clark's <i>Dawn &#38; Dusk</i></h4>
                             <ul>	    
