--- a/performances.html
+++ b/performances.html
@@ -87,6 +87,7 @@
                             <a href="http://www.gosporteats.com">Gosport Tavern</a>
                              <br>
                             702 High Street<br>
+                             Portsmouth, VA 23704
                          </p>
                          <p>
                             no cover
