--- a/performances.html
+++ b/performances.html
@@ -106,6 +106,36 @@
             </div>
                 
                 <div class="col col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-1">
+             <div class="thumbnail_background">
+             </div>
+             <div class="thumbnail performance">
+                 <p>
+                    Wednesday, October 5, 2022<br>
+                    6-8pm
+                 </p>
+                 <h4>Roger Carroll Quartet</h4>
+                 <ul>
+                    <li>Roger Carroll: tenor saxophone</li>
+                    <li>Michael McNeill: piano</li>
+                    <li>Brian Sulser: bass</li>
+                    <li>Aaron Binder: drums</li>
+                 </ul>
+                 <p>
+        <p><a href="https://vmfa.museum">Virginia Museum of Fine Arts</a><br>
+        200 N Arthur Ashe Blvd<br>
+        Richmond, VA 23220<br>
+        </p>
+        <p>
+        <a href="https://goo.gl/maps/Luw64YtXrFfgfBi28">Google Maps</a><br>
+        <a href="https://maps.apple.com/?address=200%20N%20Arthur%20Ashe%20Boulevard,%20Richmond,%20VA%2023220,%20United%20States&auid=8814895956648915596&ll=37.556436,-77.474634&lsp=9902&q=VMFA&_ext=CjIKBQgEEOIBCgQIBRADCgQIBhAQCgQIChAACgQIUhAMCgQIVRANCgQIWRABCgUIpAEQARImKYM/DRqmxkJAMRobmjy9XlPAOQEVM3bMx0JAQZDse5QDXlPAUAQ%3D">Apple Maps</a>
+        </p>
+                 <p>
+                free
+                 </p>
+             </div>
+        </div>
+                
+                <div class="col col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-1">
                     <div class="thumbnail_background">
                     </div>
                  <div class="thumbnail performance">
