--- a/ensembles.html
+++ b/ensembles.html
@@ -12,8 +12,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
 
-      <link rel="shortcut icon" href="images/IMG_2769.ico">
-   <link type="text/css" rel="stylesheet" href="css/stylesheet.css" />
+<!-- <link rel="shortcut icon" href="images/IMG_2769.ico"> -->   <link type="text/css" rel="stylesheet" href="css/stylesheet.css" />
         
 
 		
