--- a/performances.html
+++ b/performances.html
@@ -44,7 +44,8 @@
                                     <ul class="nav nav-justified">
                                         <li role="presentation" class="active"><a href="index.html">home</a></li>
                                         <li role="presentation"><a href="bio.html">bio</a></li>
-                                        <li role="presentation"><a href="performances.html">gigs</a></li>           
+                                        <li role="presentation"><a href="performances.html">gigs</a></li>
+                                        <li role="presentation"><a href="organ.html">organ</a></li>
                                         <li role="presentation"><a href="audio.html">media</a></li>
                                         <li role="presentation"><a href="ensembles.html">ensembles</a></li>
                                         <li role="presentation"><a href="teaching.html">teaching</a></li>
