--- a/performances.html
+++ b/performances.html
@@ -106,7 +106,7 @@
                                 Saturday, November 11, 2023<br>
                                 8pm
                                                             </p>
-                            <h5><a href="firemuseumpresents.com/">Fire Museum Presents</a>:</h5>
+                            <h5><a href="https://www.firemuseumpresents.com/">Fire Museum Presents</a>:</h5>
                             <h4>Allegories</h4>
                             <ul>
                                 <li>Michael McNeill, piano</li>
