--- a/performances.html
+++ b/performances.html
@@ -174,11 +174,13 @@
                                 Monday, November 13, 2023<br>
                                 7:30pm
                                                             </p>
+                            <h4>Out Of Your Head Records</h4>
+                                <h4>5th Anniversary</h4>
                             <h4>Candra Rini/Hopkins/Clark/McGraw</h4>
                             <p></p>
                             <h4>Scott Clark's <em>Dawn and Dusk</em></h4>
                             <p></p>
-                            <h4>Adam Hopkins' Crickets SOUTH</h4>
+                            <h4>Adam Hopkins' <em>Crickets SOUTH</em></h4>
                             <p>
                             <a href="https://www.artspacegallery.org/">ArtSpace Richmond</a>
                                 <br>
