--- a/performances.html
+++ b/performances.html
@@ -108,7 +108,7 @@
                             <p>
                                 The Parlor
                                 <br>
-                                375 Wadsworth Street<br>
+                                376 Grant Street<br>
                                 (at Potomac, across from Black Dots)
                                 <br>Buffalo, NY 
                             </p>
