--- a/index.htm
+++ b/index.htm
@@ -64,7 +64,9 @@
                                 <br>                            <a href="https://infrasonicpress.com/releases/barcode-poetry/">
 
                                     on Infrasonic Press</a></p>
-                            
+                            <p>
+                                <a href="https://tidal.com/browse/album/386192704?u">Tidal</a> &#8226; <a href="https://open.spotify.com/album/2ZAqSk8ZcRTbkncZnkoYO0">Spotify</a> &#8226; <a href="https://itunes.apple.com/album/id/1767383213">Apple</a>
+                            </p>
                             
                         </center>
                     </div>
