--- a/index.htm
+++ b/index.htm
@@ -65,7 +65,7 @@
 
                                     on Infrasonic Press</a></p>
                             <p>
-                                <a href="https://infrasonicpress.com/releases/barcode-poetry/">Bandcamp</a> &#8226; <a href="https://tidal.com/browse/album/386192704?u">Tidal</a> &#8226; <a href="https://open.spotify.com/album/2ZAqSk8ZcRTbkncZnkoYO0">Spotify</a> &#8226; <a href="https://itunes.apple.com/album/id/1767383213">Apple</a>
+                                <a href="https://infrasonicpress.com/releases/barcode-poetry/">Bandcamp</a> &#8226; <a href="https://www.squidco.com/miva/merchant.mvc?Screen=PROD&Store_Code=S&Product_Code=35472&Category_Code=">Squidco</a> &#8226; <a href="https://tidal.com/browse/album/386192704?u">Tidal</a> &#8226; <a href="https://open.spotify.com/album/2ZAqSk8ZcRTbkncZnkoYO0">Spotify</a> &#8226; <a href="https://itunes.apple.com/album/id/1767383213">Apple</a>
                             </p>
                             
                         </center>
